fix z-index

--- a/src/App.css
+++ b/src/App.css
@@ -86,6 +86,7 @@
   left: 50%;
   width: 70vw;
   transform: translate(-50%, -50%); 
+  z-index: -1;
 
   @media (min-width: 768px) {
     margin-top: 100px;
